--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ body {
   overflow: auto;
 }
 
-.sidebar a {
+.sidebar img {
   display: block;
   color: white;
   padding: 16px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 /*Center Page*/
@@ -74,6 +75,14 @@ font-weight: 700;
   background: #253040;
   border-radius: 16px;
 }
+/*.card_1:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    border: 1px solid grey;
+    background-color: #253040;
+  }*/
+
+
 #hi{
   color: #FFFFFF;
   font-size: 24px;
@@ -85,6 +94,23 @@ font-weight: 700;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
+  color: #F5F5F5;
+  padding-left: 10px;
+}
+#current-time{
+ font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  color: #F5F5F5;
+  padding-left: 10px;
+  line-height: 0px; 
+}
+#current-date{
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
   color: #F5F5F5;
   padding-left: 10px;
 }
